tests/ui/codemap_tests/empty_span.stderr
error[E0321]: cross-crate traits with a default impl, like `Send`, can only be implemented for a struct/enum type, not `&'static Foo`
  --> $DIR/empty_span.rs:7:5
   |
LL |     unsafe impl Send for &'static Foo { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't implement cross-crate trait with a default impl for non-struct/enum type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0321`.
